<resources>
    <string name="app_name">Water Tracker</string>
    <string name="home">Home</string>
    <string name="dashboards">Dashboards</string>
    <string name="notifications">Notificações</string>
    <string name="fake_sync_sensors">Sincronizar Sensores (Fake)</string>
    <string name="fake_sync_sensors_data">"Sincronizar Dados dos Sensores (Fake)"</string>
    <string name="sync_sensors">Sincronizar Sensores</string>
    <string name="sync_sensors_data">"Sincronizar Dados dos Sensores"</string>
    <string name="clean_all_data">"Limpar todos os dados"</string>
    <string name="n_of_sensors">Número de sensores: %1$d</string>
    <string name="last_sensors_sync">Última sincronização de sensores: %1$s</string>
    <string name="last_sensors_data_sync">Última sincronização dos dados dos sensores: %1$s</string>
    <string name="loading">Carregando…</string>
    <string name="syncronizing">Sincronizando…</string>
    <string name="cleaning">Limpando…</string>
</resources>
